fixes issue where images on stories can go off the side of the screen if too big

--- a/src/app.less
+++ b/src/app.less
@@ -141,3 +141,7 @@ html, body {
   width: 1em;
   right: 0.5em;
 }
+
+.story-image {
+  max-width: 100%;
+}
